Copy and spacing fixes

--- a/resources/css/components/quick-scan.css
+++ b/resources/css/components/quick-scan.css
@@ -1037,6 +1037,10 @@
         padding: 30px;
     }
 
+    .quick-scan-visualizer__items {
+        overflow: hidden;
+    }
+
     .quick-scan-visualizer__item:nth-child(n + 4) {
         display: none;
     }
